src/snapshots/bundle_cat__tests__ereport_list_by_class.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&class_out)"
---
PART       	SERIAL     	RESTART_ID                          	ENA       	CLASS
913-0000019	BRM09250001	660f9511-f3ac-52e5-b827-557766551111	0x9abcdef0	ereport.cpu.amd.bus_interconnect_error
