src/snapshots/bundle_cat__tests__ereport_list_by_part.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&part_out)"
---
PART       	SERIAL     	RESTART_ID                          	ENA      	CLASS
907-0000023	BRM03250000	550e8400-e29b-41d4-a716-446655440000	305419896	ereport.io.pci.device
