src/snapshots/bundle_cat__tests__ereport_list_unfiltered.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&unfiltered_out)"
---
PART       	SERIAL     	RESTART_ID                          	ENA       	CLASS
907-0000023	BRM03250000	550e8400-e29b-41d4-a716-446655440000	 305419896	ereport.io.pci.device
913-0000019	BRM09250001	660f9511-f3ac-52e5-b827-557766551111	2596069104	ereport.cpu.amd.bus_interconnect_error
