src/snapshots/bundle_cat__tests__ereport_show_unfiltered.snap
---
source: src/lib.rs
expression: "String::from_utf8_lossy(&unfiltered_out)"
---
==> ereports/907-0000023-BRM03250000/550e8400-e29b-41d4-a716-446655440000/305419896.json <==
{
  "class": "ereport.io.pci.device",
  "collector_id": "7c3a8b90-f234-4567-89ab-cdef01234567",
  "details": {
    "device_id": "0x1234",
    "vendor_id": "0x8086"
  },
  "ena": "0x0000000012345678",
  "fault_class": "fault.io.pci.device.error",
  "part_number": "907-0000023",
  "reporter": {
    "Sp": {
      "slot": 5,
      "sp_type": "Sled"
    }
  },
  "restart_id": "550e8400-e29b-41d4-a716-446655440000",
  "serial_number": "BRM03250000",
  "severity": "major",
  "time_collected": "2025-10-11T14:32:15.123Z",
  "time_deleted": null,
  "timestamp": 12345
}

==> ereports/913-0000019-BRM09250001/660f9511-f3ac-52e5-b827-557766551111/2596069104.json <==
{
  "class": "ereport.cpu.amd.bus_interconnect_error",
  "collector_id": "8d4b9c01-e345-5678-90bc-def012345678",
  "cpu_id": 3,
  "ena": "0x000000009abcdef0",
  "error_type": "bus_interconnect",
  "machine_check": {
    "bank": 0,
    "status": "0x1234567890abcdef"
  },
  "part_number": "913-0000019",
  "reporter": {
    "HostOs": {
      "sled": "9e5cad12-f456-6789-a1cd-ef0123456789"
    }
  },
  "restart_id": "660f9511-f3ac-52e5-b827-557766551111",
  "serial_number": "BRM09250001",
  "time_collected": "2025-10-11T14:45:22.456Z",
  "time_deleted": "2025-10-11T15:00:00.000Z"
}
